<resources>
    <string name="app_name">SipKip</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SipKip App</string>
    <string name="nav_header_subtitle">Bluetooth audio uploader</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_music">Music</string>
    <string name="menu_play">Play</string>
    <string name="menu_learn">Learn</string>
    <string name="menu_preferences">Settings</string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_music_content_description">Represents an image view in the
        item
    </string>
    <string name="devices">Bluetooth Devices</string>

    <string name="bluetooth_permission_title">Bluetooth permission</string>
    <string name="bluetooth_permission_grant">Bluetooth permission is required by this App. Please grant in next dialog.</string>
    <string name="bluetooth_permission_denied">Bluetooth permission was permanently denied. You have to enable permission \"%s\" in App settings.</string>
    <string name="bluetooth_permission_missing">Bluetooth permission missing</string>
    <string name="waiting_for_device">Waiting for %1$s…</string>
    <string name="menu_bt_settings">Bluetooth settings</string>
    <string name="toast_trying_to_connect">Trying to connect…</string>
    <string name="toast_connected">Connected</string>
    <string name="toast_connection_lost">Connection lost: %1$s</string>
    <string name="toast_connection_failed">Connection failed: %1$s</string>
    <string name="toast_discovery_started">Discovery of bluetooth devices (re)started</string>
    <string name="toolbar_find_device">Find Device</string>
    <string name="menu_find_device">Find Device</string>
    <string name="snackbar_no_file_picked">No file was picked</string>
    <string name="snackbar_upload_progress">Upload progress</string>
    <string name="snackbar_processing_file">Processing audio file</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_change_first_directory">Change associated clip/switch</string>
    <string name="first_directory_star_clip">Star clip</string>
    <string name="first_directory_triangle_clip">Triangle clip</string>
    <string name="first_directory_square_clip">Square clip</string>
    <string name="first_directory_heart_clip">Heart clip</string>
    <string name="first_directory_beak_switch">Beak switch</string>
    <string name="dialog_pick_first_directory">Pick associated clip/switch</string>
    <string name="toast_rename">Renaming file: %s to: %s</string>
    <string name="toast_remove">Removing file: %s</string>
    <string name="toast_change_first_directory">Changing associated clip/switch of: %s to: %s</string>
    <string name="dialog_enter_path">Enter new path</string>
    <string name="category_device_preferences">Device settings</string>
    <string name="category_xmodem_preferences">XMODEM upload settings</string>
    <string name="category_opus_preferences">Opus encoder settings</string>
    <string name="preference_always_use_xmodem_1k">Always use XMODEM 1K</string>
    <string name="preference_always_use_xmodem_vanilla_crc">Always use XMODEM Vanilla/CRC</string>
    <string name="preference_title_encoder_bitrate">Opus encoder bitrate</string>
    <string name="preference_title_encoder_frame_size">Opus encoder frame size</string>
    <string name="preference_title_encoder_use_stereo">Opus encode to stereo</string>
    <string name="preference_title_encoder_sample_rate">Opus encoder sample rate</string>
    <string name="preference_title_xmodem_1k_threshold">XMODEM 1K file size threshold</string>
    <string name="preference_title_xmodem_use_crc">Use XMODEM CRC instead of Vanilla</string>
    <string name="preference_title_bluetooth_command_long_timeout">Long command timeout</string>
    <string name="preference_title_bluetooth_command_timeout">Command timeout</string>
    <string name="preference_title_bluetooth_device_name">Device name</string>
    <string name="preference_summary_bluetooth_command_timeout">Timeout after which a command is signalled as done if no prompt has been seen, for short commands like ls.</string>
    <string name="preference_summary_bluetooth_command_long_timeout">Timeout after which a command is signalled done if no prompt has been seen, for long commands like cp.</string>
    <string name="preference_summary_on_xmodem_use_crc">Use CRC for the 128 byte packet XMODEM protocol.</string>
    <string name="preference_summary_off_xmodem_use_crc">Use a checksum for the 128 byte packet XMODEM protocol.</string>
    <string name="preference_summary_on_encoder_stereo">Encode to 2 channel opus (only for testing purposes).</string>
    <string name="preference_summary_off_encoder_stereo">Encode to 1 channel opus.</string>
    <string name="dialog_pick_new">Pick new file to upload</string>
    <string name="dialog_pick_previously_uploaded">Pick previously uploaded file</string>
    <string name="image_view_item_previously_uploaded_content_description">Represents an image view in the item</string>
    <string name="toast_share_first_try_connect">Please open the app first to connect, and only after that try again.</string>
    <string name="toast_no_valid_uri_found_in_intent"><![CDATA[Bad recorder app >:(]]></string>
    <string name="disk_usage_used">Used: %1$s/%2$s</string>
    <string name="snackbar_cancel_transfer">Cancel upload</string>
    <string name="preference_title_encoder_use_agc">AGC during audio processing.</string>
    <string name="preference_summary_on_encoder_use_agc">Use automatic gain control while processing audio.</string>
    <string name="preference_summary_off_encoder_use_agc">Don\'t use automatic gain control while processing audio.</string>
</resources>