<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_learn"
            android:icon="@drawable/ic_learn_black_24dp"
            android:title="@string/menu_learn" />
        <item
            android:id="@+id/nav_play"
            android:icon="@drawable/ic_play_black_24dp"
            android:title="@string/menu_play" />
        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/ic_music_black_24dp"
            android:title="@string/menu_music" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_preferences"
            android:icon="@drawable/ic_preferences_black_24dp"
            android:title="@string/menu_preferences" />
        <item
            android:id="@+id/nav_bt_settings"
            android:icon="@drawable/ic_bt_settings_black_24dp"
            android:title="@string/menu_bt_settings" />
    </group>
</menu>