<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_music">

    <fragment
        android:id="@+id/nav_learn"
        android:name="com.gmail.spittelermattijn.sipkip.ui.learn.LearnFragment"
        android:label="@string/menu_learn"
        tools:layout="@layout/fragment_learn">

        <argument
            android:name="bluetoothDevice"
            app:argType="android.bluetooth.BluetoothDevice" />
    </fragment>

    <fragment
        android:id="@+id/nav_play"
        android:name="com.gmail.spittelermattijn.sipkip.ui.play.PlayFragment"
        android:label="@string/menu_play"
        tools:layout="@layout/fragment_play">

        <argument
            android:name="bluetoothDevice"
            app:argType="android.bluetooth.BluetoothDevice" />
    </fragment>

    <fragment
        android:id="@+id/nav_music"
        android:name="com.gmail.spittelermattijn.sipkip.ui.music.MusicFragment"
        android:label="@string/menu_music"
        tools:layout="@layout/fragment_music">

        <argument
            android:name="bluetoothDevice"
            app:argType="android.bluetooth.BluetoothDevice" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.gmail.spittelermattijn.sipkip.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <activity
        android:id="@+id/nav_bt_settings"
        app:action="android.bluetooth.devicepicker.action.LAUNCH" />

</navigation>